# codesize

./: .gitignore  CMakeLists.txt  README.md  code_size_result.cpp  code_size_result.h  code_type.cpp  code_type.h  code_type_cpp.h  codesize.sln  codesize.vcxproj  codesize.vcxproj.filters  helpers.cpp  helpers.h  main.cpp  pch.h  user_ignored_files.cpp  user_ignored_files.h
msvc/: codesize.sln  codesize.vcxproj  codesize.vcxproj.filters
